0.5.5	UNRELEASED

 BUG FIXES

  * Fix encoding handling in Git working trees. (Jelmer Vernooij, #393038)

  * Use transports internally in "bzr git-import".
    (Jelmer Vernooij, #733919)

 API COMPLETENESS

  * Implement LocalGitControlDir.clone_on_transport. (Jelmer Vernooij, #721899)

 COMPATIBILITY

  * Drop support for Bazaar < 2.3. (Jelmer Vernooij)

0.5.4	2011-02-10

 BUG FIXES

  * Fix test suite compatibility with Bazaar 2.2. (Max Bowsher, #707434)

  * Fix compatibility with older versions of python-tdb.
    (Jelmer Vernooij, #707735)

  * Fix 'bzr git-import' from remote repositories. (Jelmer Vernooij, #706990)

  * Cope with tags when doing local fetches. (Jelmer Vernooij, #675637)

0.5.3	2011-01-21

 BUG FIXES

  * Add in an empty git repository now works. (Jelmer Vernooij, #603823)

  * Support opening of repositories over HTTP where the HTTP server
    doesn't allow directory access. (Jelmer Vernooij, #617078)

  * Support non-ascii characters in tag names. (Jelmer Vernooij, #616995)

  * Mark as compatible with bzr 2.3, 2.4. (Jelmer Vernooij)

  * Cope with unknown refs. (Jelmer Vernooij, #666443)

  * Don't peel tags automatically when pushing back.
    (Jelmer Vernooij, #675231)

  * Fix `bzr-receive-pack` and `bzr-upload-pack`. (Jelmer Vernooij, #681193)

 FEATURES

  * Remove all remaining dependencies on C git. (Jelmer Vernooij, #348238)

  * Add some basic documentation in 'bzr help git'. (Jelmer Vernooij, #605394)

  * Add --signoff option to 'bzr git-apply'. (Jelmer Vernooij)

  * Add --force option to 'bzr git-apply'. (Jelmer Vernooij)

0.5.2	2010-07-30

 COMPATIBILITY

  * Drop support for Bazaar < 2.0. (Jelmer Vernooij)

 BUG FIXES

  * Cope with kind changes when generating git objects from Bazaar 
    revisions that contain kind changes where a directory is changed 
    into a file and its (file/symlink) children are removed 
    (rather than moved). (#597758, Jelmer Vernooij)
