@@ -7,6 +7,9 @@
   * Use transports internally in "bzr git-import".
     (Jelmer Vernooij, #733919)
 
+  * Provide custom GitDir.sprout() implementation for compatibility with bzr 2.4.
+    (Jelmer Vernooij, #717937)
+
  API COMPLETENESS
 
   * Implement LocalGitControlDir.clone_on_transport. (Jelmer Vernooij, #721899)
